app/Resources/public/css/style.css
body {
    padding: 0px;
    margin: 0px;
    font-family: "Helvetica";
}

#content {
    width: 384px;
    padding: 10px;
    border-sizing: border-box;
    background: white;
}

.thin-split {
    background: #555;
    display: block;
    height: 1px;
    margin-bottom: 2px;
}

#content > .header .subline {
    text-transform: uppercase;
    font-size: 12px;
}

.card {
    margin: 5px 0px 20px 0px;
}

.card .header {
    text-transform: uppercase;
    font-family: "Helvetica";
    font-weight: 500;
    font-size: 30px;
}

.card .content {
    font-weight: 200;
}

.card .content h2 {
    margin: 10px 0px 5px 0px;
}

.card .content p {
    margin: 5px 0px 5px 0px;
    text-align: justify;
    line-height: 1.2em;
}

img {
    max-width: 384px;
}

